--- a/user_data/config.json
+++ b/user_data/config.json
@@ -1,7 +1,7 @@
 {
     "max_open_trades": 10,
     "stake_currency": "USDT",
-    "stake_amount": 50,
+    "stake_amount": 100,
     "tradable_balance_ratio": 0.99,
     "fiat_display_currency": "USD",
     "timeframe": "5m",
@@ -78,13 +78,13 @@
     },
     "telegram": {
         "enabled": false,
-        "token": "",
-        "chat_id": ""
+        "token": "1755270478:AAEJ0vXc5yqLwRjWzu-H6c_YmMjlIRlphxY",
+        "chat_id": "ikuszkabot"
     },
     "api_server": {
         "enabled": true,
         "listen_ip_address": "0.0.0.0",
-        "listen_port": 6379,
+        "listen_port": 8080,
         "verbosity": "error",
         "enable_openapi": false,
         "jwt_secret_key": "somethingrandom",
